fix: Fix the dropdown sticking out

--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -26,6 +26,10 @@
     border: 1px solid rgba(0, 0, 0, .15);
     box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .08);
 
+    overflow-x: hidden;
+    overflow-y: auto;
+    max-height: 200px;
+
     .marktone-autocomplete-list {
       border: none;
       box-shadow: none;
